# distributed_training_marketplace

./: .codexignore  .env.example  .gitignore  AGENTS-CODEX-ADDENDUM.md  AGENTS.md  Makefile  README.md  REPOSITORY_STRUCTURE_AND_STAGE1_PLAN.md  pyproject.toml  requirements-dev.txt
contracts/: README.md
contracts/script/: DeployLocal.s.sol  DeployPublic.s.sol
contracts/src/: TrainingMarketplace.sol
contracts/test/: JobLifecycle.t.sol  Settlement.t.sol  TrainingMarketplace.t.sol
docs/architecture/: domain-model.md  overview.md
docs/codex/: AGENTS-STAGE3-ADDENDUM.md  AGENTS-STAGE4-ADDENDUM.md  AGENTS-STAGE5-ADDENDUM.md  AGENTS-STAGE6-ADDENDUM.md  AGENTS-STAGE7-ADDENDUM.md  PROJECT_BRIEF_FOR_CODEX.md  extra-addendum.md
docs/mvp/: acceptance-criteria.md  extra-plan.md  scope.md  stage-1-plan.md  stage-2-plan.md  stage-3-note.md  stage-3-plan.md  stage-4-plan.md  stage-5-plan.md  stage-6-plan.md  stage-7-plan.md
docs/setup/: development.md  local-demo.md  public-demo.md  real-training-experiment.md
evaluator_agent/: README.md  __init__.py
evaluator_agent/app/: __init__.py  main.py  settings.py
infra/compose/: compose.demo.yml  compose.dev.yml
infra/docker/: evaluator.Dockerfile  orchestrator.Dockerfile  trainer.Dockerfile
infra/env/: evaluator.env.example  orchestrator.env.example  orchestrator.public.env.example  public-demo.env.example  trainer.env.example
infra/scripts/: bootstrap-dev.sh  check-env.sh  demo-clean.sh  demo-common.sh  (+23 more)
orchestrator/: README.md  alembic.ini
shared/: README.md  __init__.py
trainer_agent/: README.md  __init__.py
(+173 files in other folders)
