[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-training-marketplace"
version = "0.1.0"
description = "MVP scaffolding for a distributed training marketplace"
requires-python = ">=3.12"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["orchestrator/app/tests", "trainer_agent/app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["."]
